[package]
name = "rchive"
version = "0.1.0"
authors = ["Stoozy <mahinsemail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^0.14"
zip = "0.5.10"
lzma = "*"
unrar = "0.4.4"
log = "0.4"
env_logger = "0.8.3"


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"


